# api_deezer_full

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
api_deezer_full/: README.md  __init__.py
api_deezer_full/gw/: __init__.py  api.py
api_deezer_full/gw/decorators/: __init__.py  link.py  login.py
api_deezer_full/gw/exceptions/: __init__.py  arl_invalid.py
api_deezer_full/gw/types/: __init__.py  album.py  artist.py  contributor.py  playlist.py  track.py  user.py
api_deezer_full/gw/types/search/: __init__.py  album.py  artist.py  playlist.py  search.py
api_deezer_full/media/: __init__.py  api.py
api_deezer_full/media/exceptions/: __init__.py  insufficient_rights.py
api_deezer_full/media/types/: __init__.py  aliases.py  cipher.py  media.py  medias.py  source.py
api_deezer_full/mobile/: __init__.py  api.py  utils.py
api_deezer_full/mobile/exceptions/: bad_credentials.py
api_deezer_full/pipe/: __init__.py  api.py
api_deezer_full/pipe/decorators/: link.py  login.py
api_deezer_full/pipe/exceptions/: track_404.py
api_deezer_full/pipe/grapql/: queries.py  types.py
api_deezer_full/pipe/types/: __init__.py  album.py  artist.py  bases.py  contributor.py  cover.py  disk_info.py  lyrics.py  media.py  media_rights.py  playlist.py  track.py
